# h5py-stubs

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
h5py-stubs/: __init__.pyi  _objects.pyi  h5d.pyi  h5f.pyi  h5g.pyi  h5t.pyi
h5py-stubs/_hl/: attrs.pyi  base.pyi  dataset.pyi  datatype.pyi  files.pyi  group.pyi
