[tool.poetry]
name = "h5py-stubs"
version = "0.1.0"
description = "Type stubs for H5py"
authors = ["Matteo Bouvier <m.bouvier@vidium-solutions.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
